# QNX_Learing

./: README.md  README_Static_IP.md
 Processes_Threads & Synchronization/Introduction/: REAMDE.md
 Processes_Threads & Synchronization/Processes&Threads/: REAMDE.md
 Processes_Threads&Synchronization/ ConditionalVariables/: README.md
 Processes_Threads&Synchronization/Threads/: README.md
 Processes_Threads&Synchronization/Threads Operations/: README.md
 Processes_Threads&Synchronization/Threads _Creation/: README.md
Build _a_QNX _Neutrino_Boot_OS_Image/part1/: README.md
Comparing_QNX_IPC_Methods/HowtoChoose/: README.md
Comparing_QNX_IPC_Methods/The Methods/: README.md
HardwareProgramming/HandlingInterrupts/: README.md
HardwareProgramming/Programming_PCI_Bus/: README.md
Processes_Threads&Synchronization/AtomicOperations/: README.md
Processes_Threads&Synchronization/ProcessTermination&Cleanup/: README.md
Processes_Threads&Synchronization/Processes&Detecting Termination/: README.md
Processes_Threads&Synchronization/Synchronization/: README.md
Processes_Threads&Synchronization/SynchronizationMutexes/: README.md
QNXInterprocessCommunication/ClientInformationStructure/: README.md
QNXInterprocessCommunication/DeadlockAvoidance/: README.md
Snippets/: check_build_file.md  pattern-race.md  prepare_build_rpi5.md  steps_to_build.md  zephyr.md
booting_seq/: README.md
qnx_1_IPC/: README.md
session2_slides_explanation/: Filesystem_Architecture.md  Resource_Manager.md
test_common_api/: .gitignore  CMakeLists.client.txt  CMakeLists.server.txt  CMakeLists.txt  README.md  README_snippets.md  run_server.sh
test_common_api/Config/: vsomeip-client.json  vsomeip-server.json
test_common_api/SRC/: Client.cpp  HelloWorldStubImpl.hpp  Server.cpp
test_common_api/fidl/: HelloWorld.fdepl  HelloWorld.fidl
test_common_api/fidl/src-gen/v1/commonapi/: HelloWorld.hpp  HelloWorldProxy.hpp  HelloWorldProxyBase.hpp  HelloWorldSomeIPCatalog.json  HelloWorldSomeIPDeployment.cpp  HelloWorldSomeIPDeployment.hpp  HelloWorldSomeIPProxy.cpp  HelloWorldSomeIPProxy.hpp  HelloWorldSomeIPStubAdapter.cpp  HelloWorldSomeIPStubAdapter.hpp  HelloWorldStub.hpp  HelloWorldStubDefault.hpp
(+30 files in other folders)
